syntax="proto3";

package captcha.v1;
option go_package="github.com/lazywoo/mercury/pkg/api/captcha/v1";

service CaptchaService {
  rpc Send(CaptchaSendRequest)returns(CaptchaSendResponse);
  rpc Verify(VerifyRequest)returns(VerifyResponse);
}

message CaptchaSendRequest {
  string biz = 1;
  string phone = 2;
}

message CaptchaSendResponse{}

message VerifyRequest {
  string biz = 1;
  string phone = 2;
  string captcha = 3;
}
message VerifyResponse {
  bool answer = 1;
}